--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,9 @@
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
+      
+
 development:
   # Configure available database sessions. (required)
   sessions:
