--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,8 @@
 production:
   sessions:
     default:
-      uri: <%= ENV['MONGOHQ_URL'] %>
+      uri: <%= ENV['MONGOLAB_URI'] %>
+      
 
 development:
   # Configure available database sessions. (required)
