--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,9 +1,3 @@
-production:
-  sessions:
-    default:
-      uri: <%= ENV['MONGOLAB_URI'] %>
-      
-
 development:
   # Configure available database sessions. (required)
   sessions:
@@ -76,3 +70,7 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+production:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOHQ_URL'] %>
